<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingTop="45dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        android:orientation="vertical"
        android:background="?attr/background_lite2">

        <TextView
            android:id="@+id/TvTitle1"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sports"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="10" />

        <Button
            android:id="@+id/btn1"
            style="@style/viewMore"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/more2"
            android:layout_marginBottom="7dp"
            app:layout_constraintBottom_toTopOf="@id/recyclerView"
            app:layout_constraintHorizontal_bias="0.947"
            app:layout_constraintLeft_toRightOf="@id/TvTitle1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:scrollbarSize="0dp"
            android:scrollbars="horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvTitle1" />

        <TextView
            android:id="@+id/TvTitle2"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life"
            app:layout_constraintBottom_toTopOf="@id/recyclerView2"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn2"
            style="@style/viewMore"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/more2"
            app:layout_constraintBottom_toTopOf="@id/recyclerView2"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintLeft_toRightOf="@id/TvTitle2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView2"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:background="?attr/background_lite2"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            android:scrollbarSize="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvTitle2" />

        <TextView
            android:id="@+id/TvTitle3"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/love"
            app:layout_constraintBottom_toTopOf="@id/recyclerView3"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn3"
            style="@style/viewMore"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/more2"
            app:layout_constraintBottom_toTopOf="@id/recyclerView3"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintLeft_toRightOf="@id/TvTitle3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView2"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView3"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:background="?attr/background_lite2"
            android:layout_marginTop="5dp"
            android:scrollbars="horizontal"
            android:scrollbarSize="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvTitle3" />

        <TextView
            android:id="@+id/TvTitle4"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            app:layout_constraintTop_toBottomOf="@id/recyclerView3"
            app:layout_constraintBottom_toTopOf="@id/recyclerView4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintVertical_bias="10" />

        <Button
            android:id="@+id/btn4"
            style="@style/viewMore"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/more2"
            app:layout_constraintBottom_toTopOf="@id/recyclerView4"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintLeft_toRightOf="@id/TvTitle4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView3"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView4"
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:background="?attr/background_lite2"
            android:layout_marginTop="5dp"
            android:scrollbars="horizontal"
            android:scrollbarSize="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvTitle4"
            android:layout_marginBottom="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
